# pimoroni-pico

.github/workflows/: micropython-badger2040.yml  micropython.yml
examples/: CMakeLists.txt
examples/plasma_2040/: CMakeLists.txt  apa102.hpp  autorepeat.hpp  plasma2040.cpp  ws2812.hpp
libraries/: CMakeLists.txt
libraries/breakout_encoder/: breakout_encoder.hpp
libraries/plasma2040/: apa102.cpp  apa102.hpp  ws2812.cpp  ws2812.hpp
